--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,9 @@
       "Modules\\": "Modules/"
     }
   },
+  "config": {
+    "vendor-dir": "/../../vendor"
+  },
   "minimum-stability": "dev",
   "prefer-stable": true
 }
