--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
     }
   },
   "config": {
-    "vendor-dir": "/../../vendor"
+    "vendor-dir": "../../vendor"
   },
   "minimum-stability": "dev",
   "prefer-stable": true
